# sot-core

./: CMakeLists.txt  package.xml
