<?xml version="1.0"?>
<package format="3">
  <name>sot-core</name>
  <version>4.9.1</version>
  <description>
    Hierarchical task solver plug-in for dynamic-graph
  </description>
  <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>

  <license>BSD</license>

  <url type="website">http://stack-of-tasks.github.io</url>
  <url type="repository">http://www.github.com/stack-of-tasks/sot-core</url>
  <url type="bugtracker">http://www.github.com/stack-of-tasks/sot-core/issues</url>
  <author>Olivier Stasse</author>
  <author email="ostasse@laas.fr">ostasse@laas.fr</author>

  <build_depend version_gte="1.1" version_lt="2.0">genmsg</build_depend>

  <depend>roscpp</depend>
  <depend>dynamic-graph-python</depend>
  <depend>pinocchio</depend>
  
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <exec_depend condition="$ROS_VERSION != 1" and condition="$ROS_VERSION != 2">example-robot-data</exec_depend>

  <test_depend>gtest</test_depend>

  <doc_depend>doxygen</doc_depend>
  <doc_depend>dynamic_graph</doc_depend>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
